# led-cube-python

./: .gitignore  README.md  emulator_config.json  installation.md  setup.cfg
src/cpp/mapper/: README.md  pixel-mapper.cc
src/examples/: colors.py  cube_axes.py  cube_faces.py  cube_infos.py  cube_layout.py  cube_standby.py  demo_fonts.py  emulator_save_image.py  orientation.py  planes.py  rgb.py  rgb3d-stripes.py  rgb3d.py  roll-pitch-angles.py  startup_infos.py  websockets_color.py  websockets_demo1.py  websockets_dice.py  websockets_imu.py
src/examples/rubik/: README.md  automatic_rubik.py  interactive_rubik.py  rubik.py  threaded_rubik.py  utils.py  websockets_rubik.py
src/examples/rubik/cubie/: Cubie.py  DebugPrinter.py  DensePrinter.py  Face.py  LEDPrinter.py  Move.py  README.md  utils.py
src/examples/rubik/doc/: install.md  layouts.md  shifts.md
src/examples/shaders/: ex1.py  rgb.py  rgbt.py  shader.py  waves.py  waves_optimized.py
src/ledcube/core/: __init__.py  color.py  cube.py  dot.py  enums.py  mapper_matrix_to_cube.py  mem_cube.py  plane.py  remote.py  utils.py
src/ledcube/emulator/: __init__.py
src/ledcube/emulator/adapters/: __init__.py  base.py  mapper.py  pygame_adapter.py
src/ledcube/emulator/adapters/browser_adapter/: README.md  adapter.py  web_socket.py
src/ledcube/emulator/emulators/: canvas.py  matrix.py  options.py
src/ledcube/emulator/graphics/: __init__.py
src/ledcube/geometry/: planes.py
src/ledcube/imu/: README.md  adafruit_lis3dh.py  imu_emulator.py  lis3dh_basic.py  utils.py
src/tests/: lis3dh_simpletest.py  rgb.py
(+2 files in other folders)
