[metadata]
name = ledcube
#version = 0.1.0
version = attr: ledcube.__version__
author = François Georgy
author_email = francois.georgy@gmail.com
description = LED-Cube python support
long_description = file: README.md
long_description_content_type = text/markdown
keywords = LED, LED-Cube, cube, RGB, rgb-rpi
license = file: LICENSE.txt
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
# can not be zipped because of the fonts
zip_safe = False
package_dir=
    =src

[options.packages.find]
where=src
include=ledcube*
